fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -166,10 +166,7 @@ hr {
 
 footer {
     width: 100%;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-block-start: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
